# xyxrender

./: CITATION.cff  LICENSE  README.md  justfile  pyproject.toml
Examples/: generate.sh  smi.xyz
docs/: requirements.txt
docs/source/: acknowledgements.md  citation.md  cli_reference.md  conf.py  configuration.md  examples.md  formats.md  index.md  installation.md  orientation.md  python_api.md  quickstart_cli.md  quickstart_python.md
docs/source/api/: config.rst  core.rst  types.rst
docs/source/examples/: animations.md  annotations.md  basics.md  cmap.md  crystal.md  dens_esp.md  ensemble.md  highlight.md  hull.md  mo.md  nci_surf.md  overlay.md  style_regions.md  ts_nci.md
src/xyzrender/: __init__.py  annotations.py  api.py  cli.py  cmap.py  colors.py  config.py  contours.py  crystal.py  cube.py  dens.py  diffuse.py  ensemble.py  esp.py  export.py  gif.py  hull.py  measure.py  mo.py  nci.py  overlay.py  parsers.py  readers.py  renderer.py  skeletal.py  stereo.py  surfaces.py  types.py  utils.py  viewer.py
src/xyzrender/presets/: bubble.json  default.json  flat.json  paton.json  skeletal.json  tube.json  wire.json
tests/: test_api.py  test_cli.py  test_colors.py  test_config.py  test_crystal.py  test_cube.py  test_dof.py  test_ensemble.py  test_export.py  test_formats.py  test_gif.py  test_highlight.py  test_hull.py  test_import.py  test_overlay.py  test_skeletal_style.py  test_style_regions.py  test_surfaces.py  test_types.py  test_utils.py  test_vectors.py  test_viewer.py
